Correct commit message

--- a/deno.json
+++ b/deno.json
@@ -2,6 +2,7 @@
   "imports": {
     "bcryptjs": "npm:bcryptjs@^3.0.3",
     "cors": "npm:cors@^2.8.5",
+    "dotenv": "npm:dotenv@^17.2.3",
     "hono": "npm:hono@^4.11.1",
     "jose": "npm:jose@^6.1.3"
   },
