--- a/deno.json
+++ b/deno.json
@@ -1,10 +1,9 @@
 {
   "imports": {
-    "bcryptjs": "npm:bcryptjs@^3.0.3",
-    "cors": "npm:cors@^2.8.5",
-    "dotenv": "npm:dotenv@^17.2.3",
     "hono": "npm:hono@^4.11.1",
-    "jose": "npm:jose@^6.1.3"
+    "jose": "npm:jose@^6.1.3",
+    "postgres": "npm:postgres@^3.4.7",
+    "@std/dotenv": "jsr:@std/dotenv@^0.225.0"
   },
   "tasks": {
     "start": "deno run --allow-net src/main.ts",
